# src/main/kotlin/com/machrist/mpmonitoring/metric/model/TimeSeries.kt
@@ -1,6 +1,6 @@
 package com.machrist.mpmonitoring.metric.model
 
 data class TimeSeries(
-    val sensor: Sensor,
-    val timeSeriesPoints: List<TimeSeriesDataPoint>? = emptyList()
+    val sensorId: String,
+    val timeSeriesPoints: List<TimeSeriesDataPoint> = emptyList()
 )
